[build-system]
requires = ['setuptools>=68.0', 'wheel']
build-backend = 'setuptools.backends.legacy:build'

[project]
name = 'propninjabot'
version = '1.0.0'
description = 'QuantPicks Elite — Institutional sports analytics Telegram bot'
requires-python = '>=3.11'
dependencies = [
    'python-telegram-bot==20.7',
    'numpy==1.26.4',
    'flask==3.0.3',
    'requests==2.31.0',
]

[project.scripts]
propninjabot = 'bot:main'

[tool.setuptools]
py-modules = ['bot']